SDSS-441-444: Fix nav wrapping and drop down access (#47)
SDSS-441-444: Fix nav wrapping and drop down access

--- a/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/lockup/_lockup.scss
+++ b/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/lockup/_lockup.scss
@@ -8,6 +8,10 @@
       margin-bottom: 0;
     }
 
+    a {
+      flex-wrap: initial;
+    }
+
     .su-lockup__custom-logo {
       max-height: 5rem;
 
