--- a/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/main-navigation/_main-navigation.scss
+++ b/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/main-navigation/_main-navigation.scss
@@ -37,6 +37,7 @@
   }
 }
 
+
 // Drop down menu
 @include grid-media-min('lg') {
   .su-multi-menu {
@@ -52,6 +53,17 @@
 }
 
 .su-multi-menu {
+
+  .su-multi-menu__menu-lv1 {
+    >li {
+      &:last-child {
+        >.su-multi-menu__menu-lv2 {
+          // For issues with wrapping navigations.
+          right: unset;
+        }
+      }
+    }
+  }
 
   // Font setup.
   .su-multi-menu__menu {
